chore: rename to `api-tracker`

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/icon.png" type="image/png">
-    <title>API Viewer</title>
+    <title>API Tracker</title>
   </head>
   <body>
     <div id="app"></div>
